@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007 - TortoiseSVN
+// Copyright (C) 2007-2008 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -36,7 +36,8 @@ bool ResolveCommand::Execute()
 			CSVNProgressDlg progDlg(CWnd::FromHandle(hWndExplorer));
 			theApp.m_pMainWnd = &progDlg;
 			progDlg.SetCommand(CSVNProgressDlg::SVNProgress_Resolve);
-			progDlg.SetAutoClose(parser.GetLongVal(_T("closeonend")));
+			if (parser.HasVal(_T("closeonend")))
+				progDlg.SetAutoClose(parser.GetLongVal(_T("closeonend")));
 			progDlg.SetOptions(parser.HasKey(_T("skipcheck")) ? ProgOptSkipConflictCheck : ProgOptNone);
 			progDlg.SetPathList(dlg.m_pathList);
 			progDlg.DoModal();
